--- a/public/index.ejs
+++ b/public/index.ejs
@@ -10,13 +10,19 @@
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js" integrity="sha512-MgkNs0gNdrnOM7k+0L+wgiRc5aLgl74sJQKbIWegVIMvVGPc1+gc1L2oK9Wf/D9pq58eqIJAxOonYPVE5UwUFA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-
+        let action = "<%=action%>"
         const socket = io(`/${document.getElementById('nsp').content}`);
         socket.on('connection',function(socket){
             console.log(`socket is coonected in ${socket.id}`);
         });
         socket.on('message', function(e){
-            console.log(e);
+            if (action){
+                console[action](e);
+
+            } else {
+                console.log(e);
+
+            }
         });
     </script>
 </body>
